Etica Page Image / Paradigma Fixed

--- a/etica.html
+++ b/etica.html
@@ -91,6 +91,17 @@
               receber desde advertências a multas que podem chegar a até R$ 50
               milhões.
             </p>
+            <p>
+              Confira o infográfico abaixo com as datas de como a lei foi
+              implementada no Brasil:
+            </p>
+            <img src="./img/timeline_lgpd_brazil.jpeg" alt="" />
+            <i
+              >Fonte:
+              <a href="https://globalgcs.com.br/lgpd-o-que-e/"
+                >Global Gestão Corporativa de Sistemas</a
+              ></i
+            >
           </div>
           <div class="title">
             <h3>Relação da Notícia com a Matéria em Aula</h3>
@@ -112,7 +123,12 @@
             A capacitação, adequação e criação de cargos é muito importante para
             que as empresas estejam dentro da lei e não ofereçam riscos com os
             dados coletados de seus usários. Esse investimento pode ser muito
-            importante para evitar multas que podem alcançar até R$50 Milhões.
+            importante não apenas evitar multas que milionárias, mas também para
+            proteção de dados de clientes. Empresas que mais que se adequarem e
+            entenderem rapidamente o quanto importante é ter relações
+            transparentes e seguras com o público estarão à frente da
+            concorrência. Uma vez que essa ação tem consequência na
+            credibilidade e reputação do negócio.
           </p>
         </div>
         <div class="sidebar">
@@ -124,7 +140,9 @@
             <li>
               Braulio Portela
               <div class="social__links">
-                <a href="https://www.linkedin.com/in/braulio-portela-699603228/">
+                <a
+                  href="https://www.linkedin.com/in/braulio-portela-699603228/"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -169,7 +187,9 @@
             <li>
               Douglas Gonçalves
               <div class="social__links">
-                <a href="https://www.linkedin.com/in/douglas-gon%C3%A7alves-nepomuceno-81b54b32/">
+                <a
+                  href="https://www.linkedin.com/in/douglas-gon%C3%A7alves-nepomuceno-81b54b32/"
+                >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
@@ -207,7 +227,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Programação</li>
+                <li>Paradigmas de Programação</li>
               </ul>
             </li>
             <li>
@@ -257,7 +277,7 @@
             <li>
               Rodrigo Marrama
               <div class="social__links">
-                <a href=#>
+                <a href="#">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     role="img"
