--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Programação</li>
+                <li>Paradigmas de Programação</li>
               </ul>
             </li>
             <li>
