--- a/virtualizacao.html
+++ b/virtualizacao.html
@@ -180,7 +180,7 @@
                 ></a>
               </div>
               <ul>
-                <li>Paradigmas da Programação</li>
+                <li>Paradigmas de Programação</li>
               </ul>
             </li>
             <li>
