Etica Text Correction

--- a/etica.html
+++ b/etica.html
@@ -123,10 +123,10 @@
             A capacitação, adequação e criação de cargos é muito importante para
             que as empresas estejam dentro da lei e não ofereçam riscos com os
             dados coletados de seus usários. Esse investimento pode ser muito
-            importante não apenas evitar multas que milionárias, mas também para
-            proteção de dados de clientes. Empresas que mais que se adequarem e
-            entenderem rapidamente o quanto importante é ter relações
-            transparentes e seguras com o público estarão à frente da
+            importante não apenas para evitar multas milionárias, mas também
+            para proteção de dados de clientes. Empresas que mais que se
+            adequarem e entenderem rapidamente o quanto importante é ter
+            relações transparentes e seguras com o público estarão à frente da
             concorrência. Uma vez que essa ação tem consequência na
             credibilidade e reputação do negócio.
           </p>
