Ajuste atributo target="_blank"

--- a/paradigmas.html
+++ b/paradigmas.html
@@ -101,7 +101,7 @@
             aplicações com grande produtividade. Haverá unicidade na orientação de escrita do código entre a equipe,
             tornando-o mais legível e criando facilidade de manutenção ao longo de sua existência.</p>
           <p>Além disso, manter o mesmo paradigma determinará o objetivo da
-            <a href="https://blog.betrybe.com/carreira/programador-freelancer/"> pessoa que trabalha com programação
+            <a href="https://blog.betrybe.com/carreira/programador-freelancer/" target="_blank"> pessoa que trabalha com programação
             </a>sobre a
             composição da estrutura e execução do sistema. Isso permite que as técnicas adequadas sejam utilizadas no
             projeto em questão. É essencial manter essa metodologia durante todo o trabalho.
@@ -130,7 +130,7 @@
             tipo de paradigma, como Cobol, Fortran e Pascal.</p>
 
           <p>Nesse tipo de programação, a pessoa passará uma espécie de passo-a-passo dos procedimentos que a <a
-              href="https://blog.betrybe.com/tecnologia/aprendizado-de-maquina/"> máquina deverá executar </a> (daí o
+              href="https://blog.betrybe.com/tecnologia/aprendizado-de-maquina/" target="_blank"> máquina deverá executar </a> (daí o
             nome procedural). Nesse caso, a solução do problema será muito dependente da experiência e criatividade de
             quem trabalha com a programação. O foco da resolução estará em “como” deve ser feito.</p>
 
@@ -223,7 +223,7 @@
             outros eventos.</p>
 
           <p>Os paradigmas de programação são uma ótima fonte de conhecimento adicional. Certamente, conhecê-los bem é
-            capaz de que torne você uma <a href="https://blog.betrybe.com/carreira/objetivo-profissional/"> pessoa e
+            capaz de que torne você uma <a href="https://blog.betrybe.com/carreira/objetivo-profissional/" target="_blank"> pessoa e
               diferenciada </a> no mercado de trabalho. Dominar sua aplicabilidade coloca quem trabalha com
             desenvolvimento de softwares em um nível acima da média, pois possibilita pensar na modelagem da solução
             antes mesmo de elaborar a solução propriamente dita. Isso é um diferencial!</p>
