Paradigma Reference Info Refactor

--- a/paradigmas.html
+++ b/paradigmas.html
@@ -40,10 +40,10 @@
               <p>
                 Link da Notícia:
                 <a href="https://blog.betrybe.com/tecnologia/paradigmas-de-programacao/"
-                  target="_blank">blog.betrybe.com</a>
+                  target="_blank">Blog da Trybe</a>
               </p>
               <p>Autor: Cairo Noleto</p>
-              <p>Data: 26 de julho de 2020</p>
+              <p>Data: 26 Jul 2020</p>
             </div>
           </div>
           <p>
